; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/extr_main.c_brcms_c_calc_ba_time.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/extr_main.c_brcms_c_calc_ba_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcms_c_info = type { i32 }

@DOT11_BA_LEN = common dso_local global i64 0, align 8
@DOT11_BA_BITMAP_LEN = common dso_local global i64 0, align 8
@FCS_LEN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.brcms_c_info*, i32, i32)* @brcms_c_calc_ba_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @brcms_c_calc_ba_time(%struct.brcms_c_info* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.brcms_c_info*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.brcms_c_info* %0, %struct.brcms_c_info** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.brcms_c_info*, %struct.brcms_c_info** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @brcms_basic_rate(%struct.brcms_c_info* %7, i32 %8)
  store i32 %9, i32* %5, align 4
  %10 = load %struct.brcms_c_info*, %struct.brcms_c_info** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load i64, i64* @DOT11_BA_LEN, align 8
  %14 = load i64, i64* @DOT11_BA_BITMAP_LEN, align 8
  %15 = add nsw i64 %13, %14
  %16 = load i64, i64* @FCS_LEN, align 8
  %17 = add nsw i64 %15, %16
  %18 = call i32 @brcms_c_calc_frame_time(%struct.brcms_c_info* %10, i32 %11, i32 %12, i64 %17)
  ret i32 %18
}

declare dso_local i32 @brcms_basic_rate(%struct.brcms_c_info*, i32) #1

declare dso_local i32 @brcms_c_calc_frame_time(%struct.brcms_c_info*, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
